# py3base92

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: python-publish.yml
example/: example.py
py3base92_setup/: setup.py  uninstall.bat
src/: setup.py
src/py3_base92.egg-info/: PKG-INFO  SOURCES.txt
src/py3base92/: __init__.py  base92.py
src/py3base92.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_base92.py
