[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py3-base92"
version = "1.1.1"
authors = [
  { name="Gu-f" },
]
description = "A python library to create base92 encoded strings in python3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gu-f/py3base92"
"Bug Tracker" = "https://github.com/Gu-f/py3base92/issues"